# devices

./: README.md
MicrowaveSensorFeatherboard/: MicrowaveSensorFeatherboard.ino
MotionDetectorGlassesFeatherboard/: MotionDetectorGlassesFeatherboard.ino
beagle_avmu/: Cargo.toml  build.rs
beagle_avmu/avmu/: avmu_header_agg_c_cleaned.h  libavmudll.h
beagle_avmu/src/: avmu.rs  libavmu.rs  main.rs
beagle_avmu_py/src/: AvmuCapture.py  BeagleAvmu.py  NumpyComplexArrayEncoder.py  OneDimDSP.py  Server.py  WSServer.py  ws_server.py
snakescope/: SnakeAudio.service  SnakeCam.py  SnakeVideo.service
wolfhound/: WebsocketServer.py  Wolfhound.py  WolfhoundParser.py  Wolfhound_USB_Test.py  wolfhound.service
