[package]
name = "beagle_avmu"
version = "0.1.0"
authors = ["jnowaczek <jnowaczek@users.noreply.github.com>"]
build = "build.rs"

[build-dependencies]
bindgen = "0.48.1"
fs_extra = "1.1.0"

[dependencies]
ws = "*"
crossbeam = "*"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
libc = "0.2.50"

[profile.dev]
rpath = true
